--- a/public/css/app.css
+++ b/public/css/app.css
@@ -769,6 +769,12 @@ select {
 .min-h-\[65vh\] {
   min-height: 65vh;
 }
+.min-h-\[75vh\] {
+  min-height: 75vh;
+}
+.min-h-\[20vh\] {
+  min-height: 20vh;
+}
 .w-5 {
   width: 1.25rem;
 }
