--- a/public/css/app.css
+++ b/public/css/app.css
@@ -704,6 +704,10 @@ select {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -812,6 +816,9 @@ select {
 .w-6 {
   width: 1.5rem;
 }
+.w-5\/6 {
+  width: 83.333333%;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -823,6 +830,9 @@ select {
 }
 .table-auto {
   table-layout: auto;
+}
+.border-collapse {
+  border-collapse: collapse;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -901,6 +911,9 @@ select {
 .border-t {
   border-top-width: 1px;
 }
+.border-dashed {
+  border-style: dashed;
+}
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -923,6 +936,10 @@ select {
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+.border-slate-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
