doc page update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -844,6 +844,9 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
+.list-disc {
+  list-style-type: disc;
+}
 .flex-col {
   flex-direction: column;
 }
